# turnstile

./: .dockerignore  .gitignore  API-Frontend.toml  Cargo.toml  Dockerfile  README.md  Rocket.toml  Turnstile.toml  build.rs  build.sh  cloudbuild.yaml  docker-compose.yaml  entrypoint.sh  openapi.yaml  package.json
.dependabot/: config.yml
.github/: dependabot.yml
src/: auth.rs  beancounter_client.rs  catchers.rs  certs.rs  config.rs  elasticsearch.rs  error.rs  fairings.rs  gcp.rs  guards.rs  images.rs  mailgun.rs  main.rs  message.rs  messagebird.rs  metrics.rs  models.rs  optional.rs  redis.rs  responders.rs  rolodex_client.rs  routes.rs  static_routes.rs  switchroom_client.rs  templated.rs  token.rs  utils.rs  validation.rs
src/templates/: welcome.md
tests/: test_api.rs
tests/certs/: Frontend.crt  Frontend.key
