[package]
name = "turnstile"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
edition = "2018"

[dependencies]
color-backtrace = "0.1"
data-encoding = "2"
env_logger = { version = "0.5", default-features = false }
failure = "0.1"
futures = "0.1"
http = "0.1"
instrumented = { git = "ssh://git@github.com/umpyre-code/instrumented.git" }
jsonwebtoken = "6"
lazy_static = "1.3"
log = "0.4"
log-panics = "2"
rocket = { git = "https://github.com/brndnmtthws/Rocket.git" }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git"  }
rolodex-grpc = { git = "ssh://git@github.com/umpyre-code/rolodex.git", rev = "64585f5d4512a39e0a30e9b6dc62e07ac91748a9" }
rustls = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sodiumoxide = "0.2"
syn = "0.15"
tokio = "0.1"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-rustls = "0.9"
toml = "0.5"
tower = { git = "https://github.com/tower-rs/tower" }
tower-buffer = { git = "https://github.com/tower-rs/tower" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
webpki = "0.19"
yansi = "0.5"

[patch.crates-io]
rocket = { git = "https://github.com/brndnmtthws/Rocket.git"  }
rocket_http = { git = "https://github.com/brndnmtthws/Rocket.git" }
cookie = { git = "https://github.com/SergioBenitez/cookie-rs.git" }

[dependencies.rocket_contrib]
git = "https://github.com/brndnmtthws/Rocket.git"
default-features = false
features = ["json", "compression","serve", "helmet", "redis_pool"]

[dev-dependencies]
assert_cmd = "0.11"
data-encoding = "2"
nix = "0.13"
rand = "0.6"
reqwest = { version = "0.9", default-features = false, features = ["rustls"] }
sha2 = "0.8"
