[package]
name = "turnstile"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
edition = "2018"

[dependencies]
beancounter-grpc = { git = "ssh://git@github.com/umpyre-code/beancounter.git" }
chrono = "0.4"
data-encoding = "2"
elastic = "~0.21.0-pre.5"
elastic_derive = "~0.21.0-pre.5"
env_logger = { version = "0.6", default-features = false }
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
instrumented = { git = "ssh://git@github.com/umpyre-code/instrumented.git" }
jsonwebtoken = "6"
lazy_static = "1.3"
log = "0.4"
r2d2_redis_cluster = { git = "https://github.com/brndnmtthws/r2d2-redis-cluster.git" }
rand = "0.7"
rocket = { git = "https://github.com/brndnmtthws/Rocket.git" }
rocket_cors = "0.5"
rolodex-grpc = { git = "ssh://git@github.com/umpyre-code/rolodex.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sodiumoxide = "0.2"
switchroom-grpc = { git = "ssh://git@github.com/umpyre-code/switchroom.git" }
syn = "0.15"
time = "0.1"
tokio = "0.1"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
toml = "0.5"
tower = "0.1"
tower-buffer = "0.1"
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = "0.1"
tower-reconnect = { git = "https://github.com/tower-rs/tower" }
tower-request-modifier = "0.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
webpki = "0.19"
yansi = "0.5"

[patch.crates-io]
rocket = { git = "https://github.com/brndnmtthws/Rocket.git" }
rocket_http = { git = "https://github.com/brndnmtthws/Rocket.git" }

[dependencies.rocket_contrib]
git = "https://github.com/brndnmtthws/Rocket.git"
default-features = false
features = ["json", "compression","serve", "helmet", "redis_pool"]

[dev-dependencies]
assert_cmd = "0.11"
data-encoding = "2"
nix = "0.14"
rand = "0.7"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
sha3 = "0.8"
sodiumoxide = "0.2"
srp = "0.4"
