[package]
name = "turnstile"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
edition = "2018"
default-run = "turnstile"
license = "Apache-2.0"

[dependencies]
beancounter-grpc = { git = "ssh://git@github.com/umpyre-code/beancounter.git" }
chrono = "0.4"
data-encoding = "2"
elastic = { git = "https://github.com/brndnmtthws/elastic.git" }
elastic_derive = { git = "https://github.com/brndnmtthws/elastic.git" }
env_logger = { version = "0.7", default-features = false }
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
image = "0.22"
instrumented = "0.1"
jsonwebtoken = "6"
lazy_static = "1.3"
libc = "0.2"
log = "0.4"
r2d2_redis_cluster = "0.1"
rand = "0.7"
rayon = "1.2"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
resvg = { version = "0.8", features = ["cairo-backend"] }
rocket = { git = "https://github.com/brndnmtthws/Rocket.git" }
rocket_cors = "0.5"
rolodex-grpc = { git = "ssh://git@github.com/umpyre-code/rolodex.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sodiumoxide = "0.2"
switchroom-grpc = { git = "ssh://git@github.com/umpyre-code/switchroom.git" }
syn = "1.0"
tempfile = "3.1"
tera = "0.11"
time = "0.1"
tokio = "1.8"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
toml = "0.5"
tower = "0.1"
tower-buffer = "0.1"
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = "0.1"
tower-reconnect = { git = "https://github.com/tower-rs/tower" }
tower-request-modifier = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
unicase = "=1.4.2"
webpki = "0.19"
woothee = "0.10"
yansi = "0.5"
yup-oauth2 = "3.1"

[patch.crates-io]
rocket = { git = "https://github.com/brndnmtthws/Rocket.git" }
rocket_http = { git = "https://github.com/brndnmtthws/Rocket.git" }
prometheus = { git = "https://github.com/brndnmtthws/rust-prometheus.git", branch = "superbranch" }

[dependencies.rocket_contrib]
git = "https://github.com/brndnmtthws/Rocket.git"
default-features = false
features = ["json", "compression","serve", "helmet", "redis_pool"]

[dev-dependencies]
assert_cmd = "0.11"
data-encoding = "2"
nix = "0.15"
rand = "0.7"
sha3 = "0.8"
srp = "0.4"
